--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
               I am an aspiring <span class="typing">Cloud Engineer</span>
             </h3>
             <p>
-              Welcome to my resume website. This is my first project to demonstrate my fundamental understanding of cloud concepts and my passion for technology. I am excited to pursue opportunities in cloud engineering and contribute to innovative projects.
+              "Hello! I'm Zachary Alvarez, charting my own course into Cloud Engineering. Fueled by curiosity and built through hands-on learning, my path showcases resourcefulness and a drive to master technology independently. I'm eager to apply my practical skills and passion for problem-solving to contribute to impactful cloud-based projects.
             </p>
-            <a href="#contact" class="btn hire-me">Download CV</a>
+      
           </div>
           <div class="home-img padd-15">
             <img src="images/hero.png" alt="Hero Image" />
@@ -76,7 +76,7 @@
                 <p>Age: <span>30</span></p>
               </div>
               <div class="info-item">
-                <p>Website: <span>www.domaain.com</span></p>
+                <p>Website: <span>https://meetzach.xyz</span></p>
               </div>
               <div class="info-item">
                 <p>Email: <span>zachadrianalvarez@gmail.com</span></p>
@@ -88,10 +88,13 @@
             <div class="skills padd-15">
               <h3>Skills</h3>
               <ul>
-                <li>Cloud Computing (AWS, Azure, GCP)</li>
-                <li>Web Development (HTML, CSS, JavaScript)</li>
+                <li>Cloud Platforms : Microsoft Azure</li>
+                <li>Cloud Services : Azure Static Web App(SWA), Azure Resource Manager(ARM), Azure DNS</li>
+                <li>Web Technologies: Static Web Hosting, HTML, CSS, JavaScript,ReactJS(basic knowlegde) </li>
+                <li>Networking : Basic DNS configuration</li>
+                <li>Version Control : Git, GitHub</li>
+                <li>Infrastucture as Code(Iac) : Terraform for Provisioning Azure Resources</li>
                 <li>DevOps &amp; CI/CD</li>
-                <li>Containerization (Docker, Kubernetes)</li>
                 <li>Networking Fundamentals</li>
               </ul>
             </div>
@@ -108,7 +111,7 @@
         </div>
         <div class="row project-content padd-15">
           <div class="project-item">
-            <h3>Cloud Resume Project</h3>
+            <h3>Staic Web App</h3>
             <p>
               This project is my first venture into cloud engineering. It showcases my ability to deploy and manage a modern, responsive website on the cloud. The project demonstrates my understanding of cloud concepts and my passion for technology.
             </p>
@@ -126,9 +129,9 @@
         </div>
         <div class="row education-content padd-15">
           <div class="education-item">
-            <h3>Bachelor of Science in Computer Science</h3>
-            <p>University Name, Year - Year</p>
-          </div>
+            <h3>ABE Level 4 diploma </h3>
+            <p>School of Business and Computer Science, 2013</p>
+          </div>          
           <!-- Additional education items can be added here -->
         </div>
       </div>
@@ -144,6 +147,7 @@
           <p>
             If you would like to get in touch, please reach out to me at
             <a href="mailto:zachadrianalvarez@gmail.com">zachadrianalvarez@gmail.com</a>.
+            I am open to discussing potential opportunities, collaborations, or any questions you may have.
           </p>
         </div>
       </div>
@@ -151,12 +155,12 @@
   </div>
 
     <!-- Page View Counter Footer -->
-    <footer class="page-footer">
+  <!-- <footer class="page-footer">
       <div class="container">
         <p>Page Views: <span id="page-view-counter">0</span></p>
       </div>
     </footer>
-  </body>
+  </body> -->
   
 
   <!-- JavaScript -->
