--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                 <p>Age: <span>30</span></p>
               </div>
               <div class="info-item">
-                <p>Website: <span>https://meetzach.xyz</span></p>
-              </div>
+                <p>Phone: <span>(954) 646-5968</span></p>
               <div class="info-item">
                 <p>Email: <span>zachadrianalvarez@gmail.com</span></p>
               </div>
