--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="css/skins/color-1.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
 </head>
+
 <body>
   <!-- Sidebar Navigation -->
   <aside class="aside">
@@ -40,9 +42,12 @@
               I am an aspiring <span class="typing">Cloud Engineer</span>
             </h3>
             <p>
-              "Hello! I'm Zachary Alvarez, charting my own course into Cloud Engineering. Fueled by curiosity and built through hands-on learning, my path showcases resourcefulness and a drive to master technology independently. I'm eager to apply my practical skills and passion for problem-solving to contribute to impactful cloud-based projects.
+              "Hello! I'm Zachary Alvarez, charting my own course into Cloud Engineering. Fueled by curiosity and built
+              through hands-on learning, my path showcases resourcefulness and a drive to master technology
+              independently. I'm eager to apply my practical skills and passion for problem-solving to contribute to
+              impactful cloud-based projects.
             </p>
-      
+
           </div>
           <div class="home-img padd-15">
             <img src="images/hero.png" alt="Hero Image" />
@@ -63,7 +68,9 @@
               I am Zachary Alvarez, <span>an aspiring Cloud Engineer and Web Designer</span>
             </h3>
             <p>
-              I have a strong passion for cloud computing and web development. My goal is to leverage cloud technologies to create scalable, efficient, and secure solutions. I continuously learn and experiment with the latest cloud platforms and tools to enhance my skills.
+              I have a strong passion for cloud computing and web development. My goal is to leverage cloud technologies
+              to create scalable, efficient, and secure solutions. I continuously learn and experiment with the latest
+              cloud platforms and tools to enhance my skills.
             </p>
           </div>
           <div class="row">
@@ -77,29 +84,29 @@
               </div>
               <div class="info-item">
                 <p>Phone: <span>(954) 646-5968</span></p>
-              <div class="info-item">
-                <p>Email: <span>zachadrianalvarez@gmail.com</span></p>
+                <div class="info-item">
+                  <p>Email: <span>zachadrianalvarez@gmail.com</span></p>
+                </div>
+                <div class="info-item">
+                  <p>City: <span>MIAMI, FL</span></p>
+                </div>
               </div>
-              <div class="info-item">
-                <p>City: <span>MIAMI, FL</span></p>
+              <div class="skills padd-15">
+                <h3>Skills</h3>
+                <ul>
+                  <li>Cloud Platforms : Microsoft Azure</li>
+                  <li>Cloud Services : Azure Static Web App(SWA), Azure Resource Manager(ARM), Azure DNS</li>
+                  <li>Web Technologies: Static Web Hosting, HTML, CSS, JavaScript,ReactJS(basic knowlegde) </li>
+                  <li>Networking : Basic DNS configuration</li>
+                  <li>Version Control : Git, GitHub</li>
+                  <li>Infrastucture as Code(Iac) : Terraform for Provisioning Azure Resources</li>
+                  <li>DevOps &amp; CI/CD</li>
+                  <li>Networking Fundamentals</li>
+                </ul>
               </div>
-            </div>
-            <div class="skills padd-15">
-              <h3>Skills</h3>
-              <ul>
-                <li>Cloud Platforms : Microsoft Azure</li>
-                <li>Cloud Services : Azure Static Web App(SWA), Azure Resource Manager(ARM), Azure DNS</li>
-                <li>Web Technologies: Static Web Hosting, HTML, CSS, JavaScript,ReactJS(basic knowlegde) </li>
-                <li>Networking : Basic DNS configuration</li>
-                <li>Version Control : Git, GitHub</li>
-                <li>Infrastucture as Code(Iac) : Terraform for Provisioning Azure Resources</li>
-                <li>DevOps &amp; CI/CD</li>
-                <li>Networking Fundamentals</li>
-              </ul>
             </div>
           </div>
         </div>
-      </div>
     </section>
 
     <!-- Cloud Projects Section -->
@@ -112,7 +119,9 @@
           <div class="project-item">
             <h3>Staic Web App</h3>
             <p>
-              This project is my first venture into cloud engineering. It showcases my ability to deploy and manage a modern, responsive website on the cloud. The project demonstrates my understanding of cloud concepts and my passion for technology.
+              This project is my first venture into cloud engineering. It showcases my ability to deploy and manage a
+              modern, responsive website on the cloud. The project demonstrates my understanding of cloud concepts and
+              my passion for technology.
             </p>
           </div>
           <!-- You can add additional project items here -->
@@ -130,7 +139,7 @@
           <div class="education-item">
             <h3>ABE Level 4 diploma </h3>
             <p>School of Business and Computer Science, 2013</p>
-          </div>          
+          </div>
           <!-- Additional education items can be added here -->
         </div>
       </div>
@@ -153,16 +162,17 @@
     </section>
   </div>
 
-    <!-- Page View Counter Footer -->
+  <!-- Page View Counter Footer -->
   <!-- <footer class="page-footer">
       <div class="container">
         <p>Page Views: <span id="page-view-counter">0</span></p>
       </div>
     </footer>
   </body> -->
-  
+
 
   <!-- JavaScript -->
   <script src="js/script.js"></script>
 </body>
+
 </html>
