--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row about-content">
           <div class="about-text padd-15">
             <h3>
-              I am Zachary Alvarez, <span>an aspiring Cloud Engineer and Web Designer</span>
+              I am Zachary Alvarez, <span>Cloud Engineer and Web Designer</span>
             </h3>
             <p>
               I have a strong passion for cloud computing and web development. My goal is to leverage cloud technologies
