--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               Hello, my name is <span class="name">Zachary Alvarez</span>
             </h3>
             <h3 class="personal-info">
-              I am an aspiring <span class="typing">Cloud Engineer</span>
+              I'm a <span class="typing">Cloud Engineer</span>
             </h3>
             <p>
               "Hello! I'm Zachary Alvarez, charting my own course into Cloud Engineering. Fueled by curiosity and built
