--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
                   <li>Infrastucture as Code(Iac) : Terraform for Provisioning Azure Resources</li>
                   <li>DevOps &amp; CI/CD</li>
                   <li>Networking Fundamentals</li>
+                  <li>AI Prompt Engineering & Optimization</li>
+                  <li>MCP(Model Contrxt Protocol)</li>
+                  <li>AI Tools: ChatGPT, Sora, Midjourney, Gemini</li>
+
                 </ul>
               </div>
             </div>
