--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <li>DevOps &amp; CI/CD</li>
                   <li>Networking Fundamentals</li>
                   <li>AI Prompt Engineering & Optimization</li>
-                  <li>MCP(Model Contrxt Protocol)</li>
+                  <li>MCP(Model Context Protocol)</li>
                   <li>AI Tools: ChatGPT, Sora, Midjourney, Gemini</li>
 
                 </ul>
